--- a/templates/login副本.html
+++ b/templates/login副本.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -9,19 +8,27 @@
     <link rel="stylesheet" type="text/css" href="/static/css/dms.css" />
 	<script type="text/javascript" src="/static/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="/static/jquery-ui-1.8.16.custom.min.js"></script>
-	<script type="text/javascript" src="/static/dms-main.js"></script>
-	<script type="text/javascript" src="/static/dms-games.js"></script>
-	<script type="text/javascript" src="/static/dms-tournaments.js"></script>	
+	<script type="text/javascript" src="/static/dms-login.js"></script>
     <title>Tournament system</title>
   </head>
   <body>
+  	<table class=form>
+	<caption>login</caption>
+		<tr>
+			<th>Email:</th>
+			<td><input class=email type=text /></td>
+		</tr>
+		<tr>
+			<th>Password:</th>
+			<td><input class=psw type=password /></td>
+		</tr>
+	</table>
 	<p>
-		<button id=games>Games</button>
-		<button id=tournaments>Tournaments</button>
-		<button id=matchs>Matchs</button>
+		<button id=login>Login</button>
+		<button id=register>Register</button>
+	</p>
+	<p>
 		<button id=facebook>facebook</button>
 	</p>
-	<div id=d>
-	</div>
   </body>
 </html>
