--- a/templates/dmsUserLogin.html
+++ b/templates/dmsUserLogin.html
@@ -1,5 +1,5 @@
 <table class=form>
-<caption>Developer Login</caption>
+	<caption>Login</caption>
 	<tr>
 		<th>Email:</th>
 		<td><input id=email class=text type=text /></td>
@@ -12,4 +12,7 @@
 <p>
 	<button id=login>Login</button>
 	<button id=register>Register</button>
+</p>
+<p>
+	<button id=facebook>Facebook Login</button>
 </p>
