--- a/templates/dmsUserRegister.html
+++ b/templates/dmsUserRegister.html
@@ -1,5 +1,5 @@
 <table class=form>
-<caption>Developer Register</caption>
+<caption>Register</caption>
 	<tr>
 		<th>Email:</th>
 		<td><input id=email class=text type=text /></td>
