--- a/templates/dmsDevAward.html
+++ b/templates/dmsDevAward.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<h1>Developer Award</h1>
+<button id=back>back</button><br/><p></p>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="/static/css/blitzer/jquery-ui-1.8.16.custom.css" />
-		<link rel="stylesheet" type="text/css" href="/static/css/dms.css" />
-		<script type="text/javascript" src="static/jquery-1.6.4.min.js"></script>
-		<script type="text/javascript" src="/static/jquery-ui-1.8.16.custom.min.js"></script>
-		<script type=text/javascript src=static/dms-root.js></script>
-		<title>dms dev award</title>
-	</head>
-	<body>
-	</body>
-</html>
+<table id=d>
+	<tr>
+		<th><button id=add>add</button></th>
+		<th>name</th>
+		<th>description</th>
+		<th>image</th>
+	<tr>
+</table>
